--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "element-ui": "^2.0.0",
+    "resolve-url-loader": "^2.2.0",
     "vue": "^2.5.2"
   },
   "engines": {
@@ -20,6 +21,7 @@
     "babel-loader": "^6.4.0",
     "babel-preset-vue-app": "^1.2.0",
     "css-loader": "^0.27.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.24.1",
     "node-sass": "^4.7.2",
@@ -30,7 +32,7 @@
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^2.4.1",
+    "webpack": "^3.8.1",
     "webpack-dev-server": "^2.4.2"
   }
 }
