--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "element-ui": "^2.0.0",
     "resolve-url-loader": "^2.2.0",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-resource": "^1.3.4",
+    "vue-router": "^3.0.1"
   },
   "engines": {
     "node": ">=6"
